tests/Rules/Media/Fixtures/valid/img_with_long_attributes.html.twig
<html>
  <body>
    <img src="foo.jpg" alt="A long description" data-extra="" data-other=""
      data-more="this is a very long attribute to simulate long tags that might span tokens or lines">
  </body>
</html>
