tests/Rules/Media/Fixtures/invalid/img_split_tokens_no_alt.html.twig
{# 1 errors #}
<html>
  <body>
    <!-- Simulate an img tag split across lines/tokens -->
    <
    img src="foo.jpg">
  </body>
</html>
